feat: adding images and hintrc to errors

--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
   <head>
     <meta charset="utf-8" />
-    <meta http-equiv="Permissions-Policy" content="interest-cohort=()" />
-    <link rel="icon" href="favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="Geek Journey" content="Web site created using Vite" />
+    <meta name="Geek Journey" content="Uma jornada em um ecommerce geek" />
     <title>Geek Journey</title>
   </head>
   <body>
